resources/sass/calendar/viewport.scss
/* ------------------ Overall Layout ----------------- */

#calendar {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: flex-start;
    margin-bottom:5px;
    width: 100%;
    color: $main-text-color;
    min-height: 85%;
}

.timespan {

    &_container{

        align-self: flex-start;
        text-align: center;
        display: inline-flex;
        flex-direction: column;
        flex:1 0 85%;
        position:relative;
        background-color: $card-bg-color;
        border-radius:10px;
        margin: 30px 20px;
        overflow:hidden;
        box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);

        .week_day_name{
            flex: 1 0;
            text-align:center;
            overflow: hidden;
            text-overflow: ellipsis;
            min-width: 5rem;
        }

        .week_day_name:not(:first-child){
            border-left:1px solid $calendar-border-color;
        }
    }

    &_row_names{
        border-top: 1px solid $calendar-border-color;
    }

    &_name {
        text-align: center;
        font-size: 1.4rem;
        line-height: 2.2rem;
    }

    &_intercalary {
        border-top:0 !important;
    }

    &_row {
        display: flex;
        flex-direction: row;

        &.intercalary{
            border-top:1px solid $calendar-border-color;

            .tall{
                margin:0;
            }
        }

        &_names{
            display: flex;
            flex-direction: row;
        }

        &_container{
            display: flex;
            flex-direction: column;
            overflow-x: auto;
        }
    }

    &_day {
        border-top:1px solid $calendar-border-color;
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        background-color: $card-bg-color;
        min-width: 5rem;

        &.empty_timespan_day{
            background-color:$gray-secondary;
            min-height:75px;
        }

        &:not(:first-child){
            border-left:1px solid $calendar-border-color;
        }

        &:hover {
            .btn_create_event, .weather_icon {
                visibility: visible;
            }
        }
    }

    &_intercalary{
        background-color: $card-bg-color;
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        min-width: 5rem;

        &:not(:first-child){
            border-left:1px solid $calendar-border-color;
        }
    }

    &_number{
        display:inline-block;
        margin-left:0.22222em;
    }

    &_overflow {
        display: flex;
        flex-direction: column;
        min-height:8rem;
        flex: 1;
        color: rgba(#98a0a6, 0.6);
        background-image: $disabled-crosshatch;
        cursor: not-allowed;
        border-top:1px solid $calendar-border-color;
        padding-left:1px;
        min-width: 5rem;

        &.first{
            padding-left:0;
        }

        &.firstlast{
            border-left:1px solid $calendar-border-color;
        }

        &.last{
            padding-left:0;
        }

        &.intercalary{
            border-top:0;
            min-width: initial;
        }

        &:not(.first) {
            border-left: 1px solid $calendar-border-color;
            padding-left: 0;
        }
    }
}

.day_column{
    flex-direction: column;
    min-width:32px;
    max-width:50%;
    flex-grow: 1;
    height:100px;
}

.day_row{
    display: inline-flex;
    flex-direction: row;
    margin:0 0.2rem 0.2rem 0.2rem;
}

.day_row:last-child{
    margin-top:auto;
}

.toprow{
    display: flex;
    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
    -moz-box-flex: 1;         /* OLD - Firefox 19- */

    -webkit-flex: 1;          /* Chrome */
    -ms-flex: 1;              /* IE 10 */
    flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
    text-align: left;

    &.left{
        justify-content: flex-start;
    }

    &.center{
        justify-content: center;
    }

    &.right{
        justify-content: flex-end;
    }

    & .number{
        margin-right:5px;
        padding-right:5px;
    }

}


.day_row .title{
    text-align:center;
    -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
    -moz-box-flex: 1;         /* OLD - Firefox 19- */
    -webkit-flex: 1;          /* Chrome */
    -ms-flex: 1;              /* IE 10 */
    flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
}

.btn_small_plus{
    position:relative;
    width:20px !important;
    height:20px !important;
    padding:1px !important;
    font-size:9pt;
    margin-top:5px;
    visibility: hidden;
    -webkit-transition: visibility .0s; /* Safari */
    transition: visibility .0s;
    background-image: url('/resources/icons/plus_icon_white.png');
    background-position: center;
    background-repeat: no-repeat;
    background-size: 50%;
}

.btn_small_plus:hover{
    cursor: pointer;
}

.day_row .weather{
    font-size:10pt;
    padding-left:2px;
}

.weather_icon{
    background: url('/resources/icons/weather_icon.png');
    background-size: contain;
    width:20px !important;
    height:20px !important;
    top:0;
    left:0;
    margin-top:5px;
    visibility: hidden;
}

.weather_icon.sticky{
    visibility: visible;
}

.event{
    font-size: 0.8rem;
    word-break: break-word;
    padding: 0.4rem 0.3rem;
    margin: 0.3rem 0;
    border-left: 0.2rem solid white;
    font-family: "Montserrat";

    &_container{
        align-self: center;
        flex: 1;
        width: 100%;
    }

    &:hover{
        cursor: pointer;
        background-color: lightgrey;
        border-color: #737373;
    }

    &.Dark{
        color: #ffffff;
    }

    &.Light{
        color: #404040;
    }

    &.dot{
        color: #000000;

        &::before{
            line-height: 0;
            content: "• ";
            font-weight: 900;
        }
    }

    &.hidden_event{
        background-image:$disabled-crosshatch;
    }

    &.background{
        color: #ffffff;
    }
}

.era.hidden{
    visibility: hidden;
}

/* -------------------- Wide layout ------------------ */

.timespan_container.wide {
    overflow-x: auto;
    flex: 1 0 auto;
    align-self: flex-start;
    text-align: center;
    display: inline-flex;
    flex-direction: column;

    &::-webkit-scrollbar-track {
        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15);
        border-bottom-left-radius: 10px;
        border-bottom-right-radius: 10px;
        background-color: #F5F5F5;
    }

    &::-webkit-scrollbar {
        height: 12px;
        background-color: #F5F5F5;
        border-bottom-left-radius: 10px;
        border-bottom-right-radius: 10px;
        width: calc(100% - 5px);
        border-top: 1px solid $calendar-border-color;
    }

    &::-webkit-scrollbar-thumb {
        border-bottom-left-radius: 9px;
        border-bottom-right-radius: 9px;
        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .15);
        background-color: $accent-color;
    }


    .timespan_row_container:last-child {
        padding-bottom: 1px;
    }

    .timespan_name {
        position: sticky;
        left: 0;
    }


    .week_day_name {
        min-width: 150px;
    }

    .timespan_day,
    .timespan_intercalary,
    .timespan_overflow {
        min-width: 150px;
    }
}




/* ---------------- Vertical layout ------------------ */

.timespan_container.vertical{
    border-radius:10px;
    overflow:hidden;
    text-align: center;
    align-self: flex-start;
    text-align: center;
    display: inline-flex;
    flex-direction: column;
    flex:1 0 95%;

    .timespan_row_container{
        display: inline-flex;
        width:100%;
    }

    .timespan_name{
        font-weight: bold;
    }

    .day_row:first-child{
        justify-content: space-between;
    }

    .timespan_day{
        text-align:left;
    }

    .toprow{
        padding-top:3px;
    }

    .number{
        border-right:1px solid lightgrey;
    }

    .timespan_day:first-child{
        border-top:0;
    }

    .weekday{
        text-align:center;
    }

    .event_container{
        align-self: flex-start;
        display: flex;
        flex-wrap: wrap;
    }

    .event{
        flex: 1 1 50%;
    }


    .day_row{
        display: flex;
    }

    .day_row.moons{
        justify-content: flex-end;
        align-content: center;
    }

}


/* ---------------- Minimalistic layout ------------------ */

.timespan_outer_container{

    align-self: flex-start;
    text-align: center;
    display: inline-flex;
    flex-direction: column;
    border:0;
    overflow:hidden;
    flex:1 0 auto;
    padding:5px 0px;
    .event_container{
        font-size:0.75rem;
    }

}

.timespan_container.minimalistic{

    align-self: center;
    flex-direction: column;
    border-radius:5px;
    border:0;
    font-size:0.75rem;
    margin: 3px;
    flex:1 0 auto;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);

    .timespan_name{
        font-size:1rem;
        word-wrap: break-word;
        text-overflow: ellipsis;
        max-width: 10rem;
        align-self: center;
        line-height: 1.4rem;
    }

    .week_day_name, .timespan_day, .timespan_overflow{
        display: inline-flex;
        flex-direction: column;
        justify-content: center;
        overflow: hidden;
        text-align:center;
        flex: 1 0;
        min-height:1.5rem;
        min-width:1.5rem;
    }

    .week_day_name {
        border-bottom: 2px solid $calendar-border-color;
    }

    .has_event{
        font-weight: bold;
    }

    .timespan_row{
        &:nth-child(even) .timespan_day{
            background-color: $m-even-bg;
        }

        &:nth-child(odd) .timespan_day{
            background-color: $m-odd-bg;
        }

        .timespan_overflow {
            border: 0;
        }

        .timespan_day{
            &.preview_day{
                background-color: $weather-tooltip-bg-color;
                box-shadow: none;
            }

            &.current_day {
                background-color: $m-current-day;
                border-bottom: 0;
                color: #444;
                font-weight: bold;

                &:hover {
                    cursor:pointer;
                    background-color: $current-day-color;
                    color: currentColor;
                }
            }

            &.empty_timespan_day{
                background-color:$gray-secondary;
            }

            &:hover:not(.current_day){
                background-color: $m-day-hover;
                cursor:pointer;
            }
        }
    }
}

body {

    &.hide_timespan_number .timespan_number,
    &.hide_year_day .year_day_number_parent{
        display:none;
    }

    .year_day_number_parent{
        display: flex;
        flex-wrap: wrap;
        justify-content: end;
        flex-direction: column;
        font-size:0.75rem;
    }

}

.calendar_moon_container{
    flex-flow: row wrap;
    justify-content: center;
}

.current_day{
    background-color: $current-day-color;
    border-bottom: 5px solid #fdb44d;
}


.preview_day{
    box-shadow: inset 0 0 0 10px rgba(191.0, 99.0, 71.0, 0.5);
}

